
This extension is now also released in chrome's webstore!
https://chrome.google.com/webstore/detail/crunchysync/ajfcpdkomcbeanmgbpoiedlkegdkjgfm

## Design Changes:
- Fixed an typo