@@ -4,30 +4,16 @@ variables:
 image: maalni/maalni.gitlab.io:latest
 
 stages:
-  - build
   - tag
 
 cache:
   paths:
   - node_modules/
 
-build:
-  stage: build
-  before_script:
-  - yarn
-  script:
-  - ng build --prod --build-optimizer
-  only:
-    variables:
-      - $CI_COMMIT_MESSAGE =~ /(release v\S+\.\S+\.\S+)/
-  artifacts:
-    paths:
-    - dist/
-
 tag:
   stage: tag
   script:
-    - curl --request POST --header "PRIVATE-TOKEN:$apikey" --data "tag_name=v$(cat src/manifest.json | jq -r '.version')&ref=master&release_description=[crunchysync_latest.zip](https://gitlab.com/maalni/crunchysync/-/jobs/artifacts/master/download?job=build) $(cat releasenotes.txt)" "https://gitlab.com/api/v4/projects/maalni%2Fcrunchysync/repository/tags"
+    - curl --request POST --header "PRIVATE-TOKEN:$apikey" --data "tag_name=v$(cat src/manifest.json | jq -r '.version')&ref=master&release_description=$(cat releasenotes.txt)" "https://gitlab.com/api/v4/projects/maalni%2Fcrunchysync/repository/tags"
   only:
     variables:
       - $CI_COMMIT_MESSAGE =~ /(release v\S+\.\S+\.\S+)/
