@@ -7,7 +7,6 @@
 	border-radius: 5px 5px 5px 5px;
 	margin-bottom: 10px;
 	overflow: hidden;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .animeContainer:hover{
