@@ -1,4 +1,4 @@
-<div class="animeContainer" (click)="animeSelect()">
+<div class="animeContainer card" (click)="animeSelect()">
 	<img class="preview" [src]="anime?.most_likely_media?.screenshot_image?.fwide_url">
 	<img class="premium" src="../../assets/icons/premium.png" *ngIf="anime?.most_likely_media?.premium_only && !this.userIsPremium">
 	<button class="openEpisodebtn" (click)="openEpisode()"><img src="../assets/icons/openSelectedEpisode.svg"></button>
