@@ -2,9 +2,8 @@
 	position: relative;
 	left: 10px;
 	width: 430px;
-	height: 35px;
+	height: 40px;
 	background-color: var(--secondary-color);
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	border-radius: 5px;
 	margin-bottom: 10px;
 }
@@ -12,13 +11,15 @@
 .searchContainer .search{
 	position: relative;
 	width: 420px;
-	height: 35px;
+	height: 40px;
 	border-top-right-radius: 0px;
 	border-bottom-right-radius: 0px;
 	padding-left: 10px;
 	font-size: 15pt;
 	background-color:  var(--transparent-color);
 	color: var(--primary-color);
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 .searchContainer .search:hover{
@@ -33,14 +34,16 @@
 .searchContainer .clearsearchbtn{
 	position: relative;
 	top: -35px;
-	left: calc(430px - 33px);
-	width: 31px;
-	height: 31px;
+	left: calc(430px - 35px);
+	width: 30px;
+	height: 30px;
 	color: var(--secondary-color);
 	background-color: var(--primary-color);
 	border-radius: 20px;
 	font-size: 15pt;
 	font-weight: bold;
+	min-height: 30px;
+	line-height: 30px;
 }
 
 .searchContainer .clearsearchbtn:hover{
