@@ -1,4 +1,4 @@
-<div class="searchContainer">
+<div class="searchContainer card">
 	<input class="search" placeholder="Search..." [(ngModel)]="searchTerm" (keydown)="onSearchChangeEvent()" (keyup)="onSearchChangeEvent()" (change)="onSearchChangeEvent()" (paste)="onSearchChangeEvent()">
 	<button *ngIf="searchTerm !== ''" class="clearsearchbtn" (click)="clearSearch()">🞩</button>
 </div>
