@@ -91,6 +91,7 @@
 	line-height: 26px;
 	text-align: center;
 	padding: 0;
+	min-height: 25px;
 }
 
 .selectedAnimeContainer .selectedAnime .openEpisodebtn{
@@ -117,6 +118,7 @@
 	border: none;
 	padding: 4px;
 	border-radius: 0px;
+	min-height: 25px;
 }
 
 .selectedAnimeContainer .selectedAnime .openAnimebtn img{
@@ -133,6 +135,7 @@
 	border-top-right-radius: 0px;
 	border-bottom-right-radius: 0px;
 	padding: 4px;
+	min-height: 25px;
 }
 
 .selectedAnimeContainer .selectedAnime .completeEpisodebtn img{
