@@ -47,8 +47,6 @@
 	width: 150px;
 	border-radius: 20px;
 	height: 40px;
-	background-color: var(--primary-color);
-	color: var(--secondary-color);
 }
 
 .setupContainer .page0 .getStarted span{
@@ -90,20 +88,22 @@
 	left: 0;
 	right: 0;
 	width: 400px;
-	height: 30px;
+	height: 40px;
 	margin: auto;
-	border: var(--tertiary-color) 1px solid;
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 .setupContainer .page1 #setupPassword{
 	position: absolute;
-	top: 63%;
+	top: 64%;
 	left: 0;
 	right: 0;
 	width: 400px;
-	height: 30px;
+	height: 40px;
 	margin: auto;
-	border: var(--tertiary-color) 1px solid;
+	padding-top: 0;
+	padding-bottom: 0;
 }
 
 .setupContainer .page1 .nextbtn{
@@ -115,8 +115,6 @@
 	height: 40px;
 	font-size: 15pt;
 	border-radius: 20px;
-	background-color: var(--primary-color);
-	color: var(--secondary-color);
 	margin: auto;
 }
 
@@ -139,9 +137,13 @@
 	top: 90%;
 	right: 30px;
 	width: 100px;
-	height: 30px;
-	background-color: var(--transparent-color);
+	height: 40px;
+	background-color: var(--secondary-color);
 	color: var(--tertiary-color);
+}
+
+.setupContainer .page1 .skipbtn:hover{
+	background-color: var(--darkened-secondary-color);
 }
 
 .setupContainer .page2 .title{
@@ -180,8 +182,6 @@
 	height: 40px;
 	font-size: 15pt;
 	border-radius: 20px;
-	background-color: var(--primary-color);
-	color: var(--secondary-color);
 	margin: auto;
 }
 
@@ -231,7 +231,5 @@
 	width: 100px;
 	height: 40px;
 	border-radius: 20px;
-	background-color: var(--primary-color);
-	color: var(--secondary-color);
 	margin: auto;
 }
