@@ -1,6 +1,6 @@
 {
   "name":"Crunchysync",
-  "version": "2.1.1",
+  "version": "2.1.3",
   "manifest_version": 2,
   "description":"Sync the Crunchyroll queue properly",
   "browser_action":{
