@@ -106,6 +106,7 @@ button{
 	border: none;
 	color: var(--secondary-color);
 	background-color: var(--primary-color);
+	min-height: 40px;
 }
 
 button:hover{
@@ -114,4 +115,8 @@ button:hover{
 
 app-splashscreen{
 	display: none;
+}
+
+.card{
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
